2000-03-09  Eric Melski  <ericm@scriptics.com>

	* fileutil.test: Collected tests into one file; adapted tests for
	use in/out of tcllib test framework.
