@@ -1,3 +1,9 @@
+2000-03-10  Eric Melski  <ericm@scriptics.com>
+
+	* fileutil.test:
+	* fileutil.tcl: Added cat function, duplicates standard UNIX "cat"
+	utility.
+
 2000-03-09  Eric Melski  <ericm@scriptics.com>
 
 	* fileutil.test: Collected tests into one file; adapted tests for
